cmake_minimum_required(VERSION 3.9)
project(socket_example C)
set(CMAKE_C_STANDARD 11)
set(SRC_DIR src)
set(SERVER_SRC_FILES ${SRC_DIR}/server/main.c src/common.h)
set(CLIENT_SRC_FILES ${SRC_DIR}/client/main.c src/common.h)
set(BUILD_DIR build)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -O0 -g")
add_executable(server ${SERVER_SRC_FILES})
add_executable(client ${CLIENT_SRC_FILES})
target_link_libraries(server m)
